[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/tanks/prefabs/enemy_tank_red/scripts/enemy_tank_red.gd" type="Script" id=2]
[ext_resource path="res://assets/gfx/sprites/tank_parts_red/tankBody_red_outline.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/sprites/tank_parts_red/tankRed_barrel2_outline.png" type="Texture" id=4]
[ext_resource path="res://entities/tanks/prefabs/enemy_tank_red/collision_shapes/enemy_tank_red_collision_shape.tres" type="Shape2D" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="EnemyTankRed" instance=ExtResource( 1 )]
collision_layer = 2
script = ExtResource( 2 )
_max_speed = 200.0
_rotation_speed = 100.0
detection_radius = 400.0
rotation_speed = 1.5

[node name="TankBody" parent="." index="0"]
rotation = -1.5708
texture = ExtResource( 3 )

[node name="Turret" parent="TurretPivot" index="0"]
position = Vector2( 29.3626, 0 )
rotation = -1.5708
texture = ExtResource( 4 )

[node name="MuzzlePoint" parent="TurretPivot/Turret" index="0"]
position = Vector2( -1.53305e-006, 35.072 )

[node name="CollisionShape2D" parent="." index="2"]
shape = ExtResource( 5 )

[node name="PlayerDetection" type="Area2D" parent="." index="3"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 1 )
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
